# melody

./: .env.example  .gitignore  Cargo.toml  LICENSE  README.md  docker-compose.yml
.api/: authenticated-test.bru  bruno.json
migrations/: 20231225175308_initial.down.sql  20231225175308_initial.up.sql
src/: errors.rs  init.rs  launch.rs  main.rs  state.rs
src/app/: mod.rs  types.rs  util.rs
src/app/api/: errors.rs  mod.rs
src/app/api/v1/: mod.rs
src/app/api/v1/auth/: controllers.rs  mod.rs  requests.rs
src/app/api/v1/openai/: controllers.rs  mod.rs
src/app/auth/: auth0.rs  authenticator.rs  errors.rs  mod.rs  noop.rs  openid.rs  tests.rs
src/app/openai/: chat.rs  client.rs  errors.rs  mod.rs  usage.rs
src/app/storage/: errors.rs  mod.rs
src/app/storage/cache/: mod.rs
src/app/storage/sql/: mod.rs
