[package]
name = "melody"
version = "0.1.0"
edition = "2021"
authors = ["Anish Sinha <anishsinha0128@gmail.com>"]
description = "An API to interact with Develop for Good AI services"
license = "MIT"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.77"
axum = { version = "0.7.4", features = [
  "http2",
  "ws",
  "macros",
  "multipart",
  "tracing",
  "tokio",
  "form",
  "query",
] }
axum-extra = { version = "0.9.2", features = ["typed-header"] }
bcrypt = "0.15.0"
chrono = "0.4.33"
derive_more = "0.99.17"
dotenvy = "0.15.7"
env_logger = "0.11.1"
futures = "0.3.30"
futures-util = { version = "0.3.30", features = ["sink", "std"] }
jsonwebtoken = "9.2.0"
log = "0.4.20"
mobc = "0.8.3"
mobc-redis = "0.8.2"
rand = "0.8.5"
reqwest = { version = "0.11.24", features = [
  "cookies",
  "gzip",
  "brotli",
  "json",
  "multipart",
  "stream",
] }
rust-argon2 = "2.1.0"
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.113"
serde_with = "3.6.0"
sqlx = { version = "0.7.3", features = [
  "time",
  "uuid",
  "postgres",
  "chrono",
  "runtime-tokio",
  "macros",
] }
thiserror = "1.0.51"
tokio = { version = "1.36.0", features = ["full"] }
tower-http = { version = "0.5.1", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
uuid = { version = "1.7.0", features = ["v4", "serde"] }

[dev-dependencies]
rstest = "0.18.2"
